# coran

./: .gitignore  README.md  pyproject.toml
src/coran/: __init__.py  config.py  main.py  ranges.py
src/coran/corrections/: mixed_event.py  sideband.py
src/coran/fitting/: common.py  correlation.py  mass.py
